<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/content_area"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:Context=".ProfileActivity">

    <EditText
        android:id="@+id/edCurrentPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/change_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColorHint="#80343A40"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUpdateEmail"
        tools:targetApi="o" />

            <TextView
                android:id="@+id/tvEnterNewTargets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="casual"
                android:onClick="viewTargetInfo"
                android:text="@string/tap_here_to_view_your_current_targets"
                android:textAlignment="center"
                android:textColor="#343A40"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEnterNewCurrents"
                app:layout_constraintVertical_bias="0.072" />

    <TextView
        android:id="@+id/tvUpdateEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="casual"
        android:onClick="updateEmail"
        android:text="@string/tap_here_to_update_your_email"
        android:textAlignment="center"
        android:textColor="#343A40"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_welcome" />

    <TextView
                android:id="@+id/tvEnterNewCurrents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="casual"
                android:onClick="viewCurrentInfo"
                android:text="@string/tap_here_to_view_your_current_info"
                android:textAlignment="center"
                android:textColor="#343A40"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnUpdateEmail" />

            <ImageView
                android:id="@+id/iv_welcome"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:contentDescription="@string/aurorabanner"
                android:src="@drawable/background_gradient"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvInfoMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:fontFamily="casual"
                android:text="@string/edit_your_profile_info_below"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="@+id/iv_welcome"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/iv_welcome"
                app:layout_constraintTop_toTopOf="@+id/iv_welcome" />


    <Button
        android:id="@+id/btnUpdateEmail"
        android:layout_width="251dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/login_button"
        android:fontFamily="casual"
        android:onClick="changeUserCredentials"
        android:text="@string/change_info"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edCurrentPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


